--- a/blueprints/infokiosk/templates/infokiosk/_virtual_keyboard.html
+++ b/blueprints/infokiosk/templates/infokiosk/_virtual_keyboard.html
@@ -1,7 +1,7 @@
 {% set digits='1234567890' %}
 {% set first_row='йцукенгшщзхъ' %}
 {% set second_row='фывапролджэ' %}
-{% set third_row='ячсмитьбю-' %}
+{% set third_row='ячсмитьбю-ё' %}
 <div class="keyboard text-center">
     <div id="digits" class="hide">
         <div class="row-fluid margin-bottom-10">
