Цифры при вводе ФИЛ

--- a/blueprints/infokiosk/templates/infokiosk/registration.html
+++ b/blueprints/infokiosk/templates/infokiosk/registration.html
@@ -144,6 +144,7 @@ function change_step(newvalue){
         $('#controls').show();
         $('#digits').show();
     }else{
+        $('#digits').hide();
         $('#letters').show();
         $('#space').show();
         $('#controls').show();
