--- a/blueprints/site/static/css/style.css
+++ b/blueprints/site/static/css/style.css
@@ -228,3 +228,32 @@ ol.prog_trckr li a{
 100% {opacity:1.0;  }
 }
 /*Clock END*/
+
+/*Old Browsers*/
+#content{
+    text-align: center;
+}
+
+#browsers{
+    height: 136px;
+    margin: 15px auto 0px;
+    text-align: center;
+}
+
+#browsers a {
+    float: left;
+    width: 120px;
+    height: 20px;
+    padding: 106px 0px 13px 0;
+    -webkit-border-radius: 4px;
+    -khtml-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    text-decoration: none;
+}
+
+#browsers a:hover {
+  text-decoration: none;
+  background-color: #edf1f5!important;
+}
+/*Old Browsers END*/
