--- a/blueprints/site/static/css/select2.css
+++ b/blueprints/site/static/css/select2.css
@@ -85,7 +85,6 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     text-decoration: none;
 
     border: 0;
-    background: url('select2.png') right top no-repeat;
     cursor: pointer;
     outline: 0;
 }
@@ -182,7 +181,6 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     display: block;
     width: 100%;
     height: 100%;
-    background: url('select2.png') no-repeat 0 1px;
 }
 
 .select2-search {
@@ -496,7 +494,6 @@ disabled look for disabled choices in the results dropdown
 
     font-size: 1px;
     outline: none;
-    /*background: url('select2.png') right top no-repeat;*/
 }
 
 .select2-container-multi .select2-search-choice-close {
@@ -566,7 +563,7 @@ disabled look for disabled choices in the results dropdown
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi)  {
   .select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice .select2-arrow b {
-      background-image: url('select2x2.png') !important;
+      /*background-image: url('select2x2.png') !important;*/
       background-repeat: no-repeat !important;
       background-size: 60px 40px !important;
   }
