--- a/blueprints/infokiosk/templates/infokiosk/ticket_info.html
+++ b/blueprints/infokiosk/templates/infokiosk/ticket_info.html
@@ -8,7 +8,7 @@
 {% set client_id = session.get('client_id') %}
 <div class="row-fluid">
 <div class="span10 offset1 no_print">
-<table class="no_shadow_print table">
+<table class="no_print table">
     <thead>
     <tr><th colspan="3"><h4>УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ session.get('ticket_uid', '') }}</h4></th></tr>
     </thead>
@@ -42,10 +42,43 @@
     </td></tr>
     <tr><th>Дата и время приёма:</th><td colspan="2">{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}</td></tr>
     <tr><th colspan="3"><h4>ВНИМАНИЕ:</h4></th></tr>
-    <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении, или отмените запись, воспользовавшись ссылкой: <a href="{{ url_for('.dequeue', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), uid=session.get('ticket_hash', '')) }}" title="Отмена записи">{{ request.scheme }}://{{ request.host }}{{ url_for('.dequeue', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), uid=session.get('ticket_hash', '')) }}</a>.</td></tr>
+    <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
     <tr><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
 </table>
 </div>
+</div>
+<div class="hide" id="printable">
+    <table style="border: 1px solid; border-collapse: collapse;">
+        <tr><td style="border: 1px solid; border-collapse: collapse; padding: 5px;"><span style="text-align: center;">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ session.get('ticket_uid', '') }}</span><br />
+        ФИО (Пациент): <b>{{ session.get('patient', {}).get('name', '') }}</b><br />
+        Дата рождения: <b>{{ session.get('patient', {}).get('birthday', '') }}</b><br />
+        {% if client_id %}
+        № Амбулаторной карты: <b>{{ client_id }}</b>
+        {% else %}
+        {% if policy_type == 2 or policy_type == 4 %}
+        Полис ОМС: <b>{% if series %}{{ series }} {% endif %}{{ number }}</b>
+        {% endif %}
+        {% if policy_type == 1 %}
+        Полис ОМС (временное свидетельство): <b>{{ number }}</b>
+        {% endif %}
+        {% if policy_type == 3 %}
+        Полис ДМС: <b>{% if series %}{{ series }} {% endif %}{{ number }}</b>
+        {% endif %}
+        {% if document_code == 7 %}
+        Военный билет: <b>{% if series %}{{ series }} {% endif %}{{ number }}</b>
+        {% endif %}
+        {% if document_code == 4 %}
+        Удостоверение личности офицера: <b>{% if series %}{{ series }} {% endif %}{{ number }}</b>
+        {% endif %}
+        </td></tr>
+        <tr><td style="border: 1px solid; border-collapse: collapse; padding: 5px;"><span style="text-align: center;"><b>Вы записаны на прием:</b></span><br />
+        Лечебное учреждение:<br />
+        <b>{{ lpu.name }}, {% if lpu|attr('buildings') and lpu.buildings[0] %}{{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% if lpu.buildings[0]|attr('phone') %}, тел.: {{ lpu.buildings[0]|attr('phone') }}{% endif %}{% endif %}</b><br />
+        Врач: <b>{{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }} ({{ doctor.get('speciality') }})</b><br />
+        Дата и время приема: <b>{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}{% if office %} (кабинет: {{ office }}){% endif %}<br/></b></td></tr>
+        <tr><td style="border: 1px solid; border-collapse: collapse; padding: 5px;"><b>Внимание:</b><i>* В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</i><br />
+        <i>* С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приема.</i></td></tr>
+    </table>
 </div>
 {% endblock %}
 {% block js %}
