--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -42,7 +42,7 @@
     </td></tr>
     <tr><th>Дата и время приёма:</th><td colspan="2">{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}</td></tr>
     <tr><th colspan="3"><h4>ВНИМАНИЕ:</h4></th></tr>
-    <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
+    <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении, или отмените запись, воспользовавшись ссылкой: <a href="{{ url_for('.dequeue', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), uid=session.get('ticket_hash', '')) }}" title="Отмена записи">{{ request.scheme }}://{{ request.host }}{{ url_for('.dequeue', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), uid=session.get('ticket_hash', '')) }}</a>.</td></tr>
     <tr><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
 </table>
 <br />
